added tutorial game for boilerplate

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ markdown: kramdown
 exclude: ["Gemfile", "Gemfile.lock", "Rakefile", "README.md"]
 
 # Jekyll Assets config
-assets:
-  js_compressor: uglifier
-  css_compressor: sass
+#assets:
+#  js_compressor: uglifier
+#  css_compressor: sass
