game framework and drawing font on screen

--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,4 @@ exclude: ["Gemfile", "Gemfile.lock", "Rakefile", "README.md"]
 #assets:
 #  js_compressor: uglifier
 #  css_compressor: sass
+gzip: []
