--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ markdown: kramdown
 exclude: ["Gemfile", "Gemfile.lock", "Rakefile", "README.md"]
 
 # Jekyll Assets config
-#assets:
-#  js_compressor: uglifier
-#  css_compressor: sass
+assets:
+  js_compressor: uglifier
+  css_compressor: sass
 gzip: []
